# fastapi-todo-demo

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
tests/: test_main.py
